Made changes to text font-size for multiple media conditions, made adjustments to the landing sections span on smaller screens, and fixed an issue with a shadow in the menu tab-panes

--- a/css/book.css
+++ b/css/book.css
@@ -10,3 +10,11 @@ textarea:focus {
   opacity: 0.8;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
+
+@media(max-width: 400px) {
+  #book-form input,
+  #book-form input::placeholder,
+  .book-btn {
+    font-size: 18px !important;
+  }
+}
