--- a/css/contact.css
+++ b/css/contact.css
@@ -38,5 +38,11 @@
   margin-left: 5px; 
 }
 
+@media(max-width: 400px) {
+  .contact-link a {
+    font-size: 18px !important;
+  }
+}
+
 
   
