--- a/css/landing.css
+++ b/css/landing.css
@@ -13,7 +13,7 @@
   
   @media (max-width: 1200px) {
     .floating-span h1 {
-      font-size: 3.5rem !important;
+      font-size: 3rem !important;
     }
   }
   
@@ -30,18 +30,20 @@
   }
   
   @media (max-width: 576px) {
+    .floating-span h1 {
+      font-size: 1.5rem !important;
+    }
+
     .floating-span {
-      position: relative;
-      display: block;
-      margin-top: 2rem;
-      left: auto;
-      transform: none;
-      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 2%;
+      transform: translateY(-50%);
+      white-space: nowrap;
     }
   }
 
-/* Define the fade-in animation */
-@keyframes landingSpanfade {
+@keyframes landingFadeIn {
   from {
       opacity: 0;
   }
@@ -50,26 +52,33 @@
   }
 }
 
-.landingSpanfade {
+.landingSpanFade {
   opacity: 0;
-  animation: fadeIn 4s forwards;
+  animation: landingFadeIn 5s forwards;
 }
 
-@keyframes landingImgfade {
-  from {
-      filter: brightness(95%);
-  }
-  to {
-      filter: brightness(100%);
-  }
-}
-
-#landing-img {
-  animation: fadeIn 2s forwards;
+.landingImgFade {
+  animation: landingFadeIn 3s forwards;
 }
 
 @media (max-width: 350px) {
   #landing-span h1 {
     font-size: 25px !important;
+  }
+}
+
+@media (min-width: 1400px){
+  #landing-img {
+    height: calc(100vh - 70px);
+      width: 100%;
+      object-fit: cover;
+  }
+}
+
+@media (max-width: 992px){
+  #landing-img {
+    height: calc(50vh - 70px);
+      width: 100%;
+      object-fit: cover;
   }
 }
