--- a/css/nav.css
+++ b/css/nav.css
@@ -99,3 +99,13 @@ html {
         transition: transform 0.3s ease, opacity 0.3s ease;
       }
   }
+
+  @media (max-width: 576px) {
+    .nav-a {
+      font-size: 16px !important;
+    }
+
+    .nav-btn {
+      font-size: 14px !important;
+    }
+  }
