--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,25 @@ p {
   border: none;
   padding: 8px 15px;
 }
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 24px !important;
+  }
+
+  h3 {
+    font-size: 22px !important;
+  }
+
+  h4 {
+    font-size: 20px !important;
+  }
+
+  h5 {
+    font-size: 18px !important;
+  }
+
+  p {
+    font-size: 18px !important;
+  }
+}
